--- a/Thesis.bib
+++ b/Thesis.bib
@@ -477,6 +477,21 @@ $\bar{p}p$ collisions}",
       primaryClass   = "hep-ex",
 }
 
+@article{ATLAS:2014wva,
+      key            = "1286320",
+      title          = "{First combination of Tevatron and LHC measurements of
+                        the top-quark mass}",
+      collaboration  = "ATLAS Collaboration, CDF Collaboration, CMS
+                        Collaboration, D0 Collaboration",
+      year           = "2014",
+      eprint         = "1403.4427",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "ATLAS-CONF-2014-008, CDF-NOTE-11071, CMS-PAS-TOP-13-014,
+                        D0-NOTE-6416",
+      SLACcitation   = "%%CITATION = ARXIV:1403.4427;%%",
+}
+
 @Article{bib:CPViolation:Wu,
      author    = "Wu, C. S. and others",
      journal   = "Phys. Rev. Lett.",
@@ -3583,6 +3598,15 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       address       = "Geneva",
       number        = "CMS-PAS-BTV-13-001",
       year          = "2013",
+}
+
+@article{CMS:2014fya,
+      author         = "CMS Collaboration",
+      title          = "{Boosted Top Jet Tagging at CMS}",
+      collaboration  = "CMS Collaboration",
+      year           = "2014",
+      reportNumber   = "CMS-PAS-JME-13-007",
+      SLACcitation   = "%%CITATION = CMS-PAS-JME-13-007 ETC.;%%",
 }
 
 @article{1748-0221-6-11-P11002,
