--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3609,6 +3609,48 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       SLACcitation   = "%%CITATION = CMS-PAS-JME-13-007 ETC.;%%",
 }
 
+@techreport{CMS-PAS-JME-09-001,
+      title         = "{A Cambridge-Aachen (C-A) based Jet Algorithm for boosted
+                       top-jet tagging}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "2009. Geneva",
+      number        = "CMS-PAS-JME-09-001",
+      month         = "Jul",
+      year          = "2009",
+}
+
+@article{Kaplan:2008ie,
+      author         = "Kaplan, David E. and Rehermann, Keith and Schwartz,
+                        Matthew D. and Tweedie, Brock",
+      title          = "{Top Tagging: A Method for Identifying Boosted
+                        Hadronically Decaying Top Quarks}",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "101",
+      pages          = "142001",
+      doi            = "10.1103/PhysRevLett.101.142001",
+      year           = "2008",
+      eprint         = "0806.0848",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0806.0848;%%",
+}
+
+@article{Plehn:2010st,
+      author         = "Plehn, Tilman and Spannowsky, Michael and Takeuchi,
+                        Michihisa and Zerwas, Dirk",
+      title          = "{Stop Reconstruction with Tagged Tops}",
+      journal        = "JHEP",
+      volume         = "1010",
+      pages          = "078",
+      doi            = "10.1007/JHEP10(2010)078",
+      year           = "2010",
+      eprint         = "1006.2833",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1006.2833;%%",
+}
+
 @article{1748-0221-6-11-P11002,
       collaboration  = {CMS},
       title          = "{Determination of Jet Energy Calibration and Transverse Momentum Resolution in CMS}",
