--- a/Objects.tex
+++ b/Objects.tex
@@ -41,11 +41,18 @@ d_{ij} = \mathrm{min}(k_{T,i}^{2p}, k_{T,j}^{2p}) \frac{\Delta R_{ij}^2}{R^2}
 \begin{equation*}
 d_{iB} = k_{T,i}^{2p}
 \end{equation*}
-with the distance $d_{ij}$ between final state objects $i$ and $j$ carrying transverse momentum $k_T$ and the distance of the object to the beam $d_{iB}$. While $\Delta R_{ij}$ denotes the spatial separation in the $(\eta, \phi)$-plane, $R$ and $p$ are free parameters of the algorithm. The recombination is done by first calculating $d_{ij}$ and $d_{iB}$ for all objects in the final state by identifying the minimum value. If the minimum is $d_{ij}$, the two objects $i$ and $j$ are combined and all distances are computed again. However, if the minimum is $d_{iB}$, object $i$ is declared a jet and removed from the input list. This procedure is repeated until all objects are assigned. In this context the parameter $R$ acts as an angular cut-off and thus has a similar role as the jet radius in cone algorithms. Depending on the choice of the parameter $p$ different types of algorithms are distinguished which are all IRC safe. An illustration of an arbitrary example event where jets are clustered with the different jet algorithms is shown in Fig~\ref{fig:jet_algos}. The $k_T$-algorithm uses $p = 1$~\cite{PhysRevD.48.3160} and thus clusters soft particles first. This results mainly in irregular shaped jets (cf. Fig~\ref{fig:jet_algos}) and makes them sensitive to radiation in the event. Consequently, they are difficult to calibrate and therefore impratical to use at hadron colliders. The \textit{Cambride-Aachen}- or short \textit{CA}-algorithm~\cite{Dokshitzer:1997in, Wobisch:1998wt} utilizes $p = 0$. Thus, it does not rely on momentum information but clusters jets based on the angular separation of input objects. This allows a direct geometric interpretation of jets and makes this type of jet algorithm especially suited for analyses of jet substructure as will be discussed later in Section~\ref{sec:boosted_tops}. These jets do still reflect the structure of the parton shower, but are less affected by soft radiation than the $k_T$-algorithm. Finally, the \textit{anti-$k_T$}-algorithm uses $p = -1$~\cite{1126-6708-2008-04-063} and starts the jet clustering beginning with the hardest objects in the event. Hence, the evolution of the parton shower is not reproduced. The anti-$\mathrm{k_T}$ algorithm tends to form very regular shaped jets, as the four-momentum of the core of the jet is not much affected by the softer components which are clustered later in the process. Typically, the regular shape allows an easy calibration of anti-$\mathrm{k_T}$ jets and thus they are the default jets to be used at the CMS experiment. If other than anti-$\mathrm{k_T}$ jets are used in this thesis, this is stated explicitly.
+with the distance $d_{ij}$ between final state objects $i$ and $j$ carrying transverse momentum $k_T$ and the distance of the object to the beam $d_{iB}$. While $\Delta R_{ij}$ denotes the spatial separation in the $(\eta, \phi)$-plane, $R$ and $p$ are free parameters of the algorithm. The recombination is done by first calculating $d_{ij}$ and $d_{iB}$ for all objects in the final state by identifying the minimum value. If the minimum is $d_{ij}$, the two objects $i$ and $j$ are combined and all distances are computed again. However, if the minimum is $d_{iB}$, object $i$ is declared a jet and removed from the input list. This procedure is repeated until all objects are assigned. In this context the parameter $R$ acts as an angular cut-off and thus has a similar role as the jet radius in cone algorithms. Depending on the choice of the parameter $p$ different types of algorithms are distinguished which are all IRC safe. An illustration of an arbitrary example event where jets are clustered with the different jet algorithms is shown in Fig~\ref{fig:jet_algos}. The $k_T$-algorithm uses $p = 1$~\cite{PhysRevD.48.3160} and thus clusters soft particles first. This results mainly in irregular shaped jets (cf. Fig~\ref{fig:jet_algos}) and makes them sensitive to radiation in the event. Consequently, they are difficult to calibrate and therefore impratical to use at hadron colliders. The \textit{Cambride-Aachen}- or short \textit{CA}-algorithm~\cite{Dokshitzer:1997in, Wobisch:1998wt} utilizes $p = 0$. Thus, it does not rely on momentum information but clusters jets based on the angular separation of input objects. This allows a direct geometric interpretation of jets and makes this type of jet algorithm especially suited for analyses of jet substructure as will be discussed later in Section~\ref{sec:boosted_tops}. These jets do still reflect the structure of the parton shower, but are less affected by soft radiation than the $k_T$-algorithm. Finally, the \textit{anti-$k_T$}-algorithm uses $p = -1$~\cite{1126-6708-2008-04-063} and starts the jet clustering beginning with the hardest objects in the event. Hence, the evolution of the parton shower is not reproduced. The anti-$\mathrm{k_T}$ algorithm tends to form very regular shaped jets, as the four-momentum of the core of the jet is not much affected by the softer components which are clustered later in the process. Typically, the regular shape allows an easy calibration of anti-$\mathrm{k_T}$ jets.  
 \end{description}
 
 \subsection{Jet Types at CMS}
 \label{subsec:jets_types}
+The default jets to be used at the CMS experiment are jets clustered by the anti-$\mathrm{k_T}$ algorithm using a distance parameter of R = 0.5. This can be applied to reconstructed detector signals resulting in \textit{detector-level} jets or to final-state particles after hadronisation, as this is possible in simulated events, giving rise to \textit{particle-level} jets. Implementations of various jet algorithms are provided by the \textit{FastJet} package~\cite{Cacciari:2011ma, Cacciari:2005hq}. \\
+Based on the information used from the various CMS subdetectors for the jet clustering different types of detector-level jets are distinguished. Some of them are the following:
+\begin{description}
+ \item \textbf{Calorimeter (Calo) jets:}
+ \item \textbf{Jet-Plus-Track (JPT) jets:}
+ \item \textbf{Particle-Flow (PF) jets:}
+\end{description}
 
 \subsection{Jet Transverse-Momentum Response}
 \label{subsec:jets_response}
